# pptx_duration

./: LICENSE  README.md  pyproject.toml
pptx_duration/: __main__.py  duration.py
